--- a/privacy.html
+++ b/privacy.html
@@ -3,127 +3,122 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Privacy Policy for PetVerse" />
   <title>Privacy Policy - PetVerse</title>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    :root {
-      --primary-color: #222;
-      --accent-color: #ff7f50;
-      --bg-color: #f9f9f9;
-      --text-color: #333;
-    }
-
     body {
       margin: 0;
-      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      background: var(--bg-color);
-      color: var(--text-color);
-      line-height: 1.6;
-    }
-
-    header {
-      background: var(--primary-color);
-      color: white;
-      padding: 2rem 1rem;
+      font-family: 'Space Grotesk', sans-serif;
+      background: radial-gradient(circle at top right, #ffe600, #ff4081);
+      color: #222;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
       text-align: center;
+      background-size: 400% 400%;
+      animation: gradientBG 15s ease infinite;
+      padding: 2rem;
+      overflow-x: hidden;
     }
 
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-    }
-
-    main {
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 0 1rem;
+    h1 {
+      font-size: 2.8rem;
+      font-weight: 700;
+      margin-bottom: 2rem;
+      background: linear-gradient(90deg, #ff4081, #ff9800);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: slideIn 1s ease forwards;
     }
 
     section {
+      max-width: 800px;
+      text-align: left;
+      background: #ffffffdd;
+      padding: 2rem;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
       margin-bottom: 2rem;
     }
 
-    h2 {
-      color: var(--accent-color);
-      font-size: 1.4rem;
-      margin-top: 2rem;
+    section h2 {
+      color: #ff4081;
+      font-size: 1.5rem;
+      margin-top: 1.5rem;
     }
 
-    p {
-      margin: 0.5rem 0;
+    section p, section li {
+      font-size: 1.05rem;
+      color: #333;
+      line-height: 1.6;
+      margin-bottom: 1rem;
     }
 
-    footer {
-      text-align: center;
-      font-size: 0.9rem;
-      padding: 2rem 1rem;
-      color: #777;
+    ul {
+      padding-left: 1.2rem;
+    }
+
+    a {
+      color: #ff4081;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    @keyframes gradientBG {
+      0% {background-position: 0% 50%;}
+      50% {background-position: 100% 50%;}
+      100% {background-position: 0% 50%;}
+    }
+
+    @keyframes slideIn {
+      from { opacity: 0; transform: translateY(-30px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     @media (max-width: 600px) {
-      header h1 {
-        font-size: 1.5rem;
+      h1 {
+        font-size: 2rem;
       }
-
-      main {
-        padding: 0 1rem;
+      section {
+        padding: 1.5rem;
       }
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Privacy Policy</h1>
-  </header>
-  <main>
-    <section>
-      <p><strong>Effective Date:</strong> June 5, 2025</p>
-    </section>
+  <h1>Privacy Policy</h1>
+  <section>
+    <p><strong>Effective Date:</strong> June 5, 2025</p>
 
-    <section>
-      <h2>1. Information We Collect</h2>
-      <p>We collect your name, your pet's name and type, and Apple or Google sign-in information.</p>
-      <p><strong>Note:</strong> Uploaded photos are not stored permanently. They are processed temporarily and deleted afterward.</p>
-    </section>
+    <h2>1. Information We Collect</h2>
+    <p>We collect your name, your pet's name and type, and sign-in information via Apple or Google.</p>
+    <p><strong>Note:</strong> Uploaded photos are not stored permanently. They are processed temporarily and deleted afterward.</p>
 
-    <section>
-      <h2>2. How We Use Your Data</h2>
-      <p>We use your data to generate AI-based visuals of your pet and to personalize your experience. We do not sell or share your data.</p>
-    </section>
+    <h2>2. How We Use Your Data</h2>
+    <p>Your data is used to generate AI-based visuals and personalize your experience. We never sell or share your data.</p>
 
-    <section>
-      <h2>3. Subscriptions & Payments</h2>
-      <p>Subscriptions are managed exclusively by Apple. Refunds are not provided after a subscription starts. Subscription changes are not individually communicated.</p>
-    </section>
+    <h2>3. Subscriptions & Payments</h2>
+    <p>All subscriptions are managed by Apple. Refunds are not issued once a subscription begins. Any changes to subscription terms are not notified individually.</p>
 
-    <section>
-      <h2>4. Data Deletion</h2>
-      <p>You can delete your account and all associated data from within the app. Your content is private and not shared.</p>
-    </section>
+    <h2>4. Data Deletion</h2>
+    <p>You may delete your account and all associated data from the app settings.</p>
 
-    <section>
-      <h2>5. International Use</h2>
-      <p>The app is available globally. By using PetVerse, you agree to data processing in accordance with this policy.</p>
-    </section>
+    <h2>5. International Use</h2>
+    <p>PetVerse is available globally. By using the app, you consent to the processing of your data under this policy.</p>
 
-    <section>
-      <h2>6. Policy Changes</h2>
-      <p>This policy may be updated without prior notification. The most current version will always be available on this page.</p>
-    </section>
+    <h2>6. Policy Changes</h2>
+    <p>We may update this policy without prior notice. The latest version will always be visible on this page.</p>
 
-    <section>
-      <h2>7. Third-Party Services</h2>
-      <p>No third-party services are used to store or process your personal data or uploaded images. All processing is temporary and secure.</p>
-    </section>
+    <h2>7. Third-Party Services</h2>
+    <p>We do not use any third-party services to store or process personal data. All AI processing is secure and temporary.</p>
 
-    <section>
-      <h2>8. Contact</h2>
-      <p>Email us at: <a href="mailto:petlab6127@gmail.com">petlab6127@gmail.com</a></p>
-    </section>
-  </main>
-
-  <footer>
-    &copy; 2025 PetVerse. All rights reserved.
-  </footer>
+    <h2>8. Contact</h2>
+    <p>Have questions? Reach out to us at <a href="mailto:petlab6127@gmail.com">petlab6127@gmail.com</a></p>
+  </section>
 </body>
 </html>
